Changed color and fixed spacing (about page)

--- a/game-app/index.css
+++ b/game-app/index.css
@@ -463,9 +463,9 @@ Media queries
     margin: 4rem auto;
     padding: 3rem 4rem;
     border-radius: 1rem;
-    color: var(--dark-primary);
+    color: #1e1e58; 
     font-family: 'Fredoka', sans-serif;
-    margin: 2rem auto 4rem auto; 
+    margin: 10rem auto 20rem auto; 
     
 }
 
@@ -473,7 +473,7 @@ Media queries
     text-align: center;
     margin-bottom: 1.5rem;
     font-size: 2.5rem;
-    color: var(--dark-primary);
+    color: #1e1e58; 
     
 }
 
